# Carrot

./: .dockerignore  .env.sample  .gitignore  Dockerfile  Jumper.code-workspace  docker-compose.yml  pyproject.toml  start.sh
.github/workflows/: publish.yml
src/: manage.py
src/_config/: asgi.py  permissions.py  settings.py  urls.py  wsgi.py
src/_config/services/: swagger.py
src/_config/services/storage_utils/: __init__.py  presigned_url.py
src/_config/views/: app_info_views.py
src/actions/: permissions.py  urls.py  views.py
src/actions/migrations/: 0001_initial.py  0002_initial.py  0003_historicalpythonactiondata_historicallinkactiondata.py  0004_remove_action_type.py  0005_action_roles.py  0006_action_is_active_alter_action_thumbnail_and_more.py  0007_action_is_public.py  0008_windowscmdactiondata_and_more.py  0009_historicalpythonactiondata_combobox_code_and_more.py  0010_historicalwindowscmdactiondata_combobox_code_and_more.py  0011_alter_historicallinkactiondata_url_and_more.py  0012_historicalaction.py  0013_alter_historicalaction_thumbnail_and_more.py  0014_remove_historicalaction_roles_action_and_more.py  0015_historicalaction_users_historicalaction_roles_and_more.py  0016_action_workspace_historicalaction_workspace.py  0017_action_section_historicalaction_section.py
src/actions/models/: __init__.py  action_data_models.py  action_models.py
src/actions/serializers/: action_data_version_serializers.py  action_serializers.py  action_thumbnail_serializer.py
src/actions/views/: action_thumbnail_viewset.py  action_viewset.py
src/auths/: apps.py  jwt.py  models.py  oidc.py  urls.py  views.py
src/auths/jwt/: jwt_auth_views.py  jwt_utils.py
src/auths/migrations/: 0001_initial.py
src/auths/oidc/: custom_oidc_authentication_backend.py  oidc_auth_views.py
src/auths/reset_password/: email_utils.py  encrypt_utils.py  password_reset_request_model.py  reset_password_views.py
src/auths/templates/: user_password_reset_confirm_email.html  user_password_reset_confirm_email.txt  user_reset_password_otp_email.html  user_reset_password_otp_email.txt
src/jumper/: asgi.py  front_updater.py  permissions.py  settings.py  test_private_key.pem  test_public_key.pem  urls.py  wsgi.py
src/jumper/services/: jwt_rs256_keys.py  utils.py
src/jumper/services/storage_utils/: presigned_url.py
src/jumper/storage_utils/: file_field.py  presigned_url.py
src/jumper/views/: front_updater_views.py
src/system/: apps.py  models.py  serializers.py  urls.py  views.py
src/system/migrations/: 0001_initial.py  0002_systeminfo_allow_custom_background_image_and_more.py  0003_rename_allow_custom_background_image_systeminfo_allow_background_image_and_more.py  0004_alter_systeminfo_default_background_image.py  0004_systeminfo_allow_action_sections_and_more.py  0005_alter_systeminfo_default_background_image.py  0006_systeminfo_allow_action_sections_and_more.py
src/users/: apps.py  models.py  permissions.py  scim.py  signals.py  urls.py
src/users/migrations/: 0001_initial.py  0002_user_system_role.py  0003_assign_admin_role.py  0004_alter_user_system_role.py  0005_userpreferences.py  0006_alter_userpreferences_custom_background_image.py  0007_alter_userpreferences_custom_background_image.py
src/users/serializers/: group_serializers.py  role_serializers.py  user_preferences_serializers.py  user_serializers.py
src/users/templates/email/: user_reset_password_email.html  user_reset_password_email.txt
src/users/views/: group_viewset.py  role_viewset.py  user_preferences_viewset.py  user_profile_picture_mixin.py  user_viewset.py
src/workspaces/: models.py  permissions.py  serializers.py  urls.py  views.py
src/workspaces/migrations/: 0001_initial.py  0002_workspace_is_active.py  0003_rename_create_by_workspace_created_by.py  0004_alter_workspace_is_active.py  0005_alter_workspace_name.py
